syntax = "proto3";

service HeadingsLogService {
  rpc MessageReceived (LogRequest) returns (Empty);
}

message LogRequest {
  string title = 1;
}

message Empty {

}